<resources>
    <string name="app_name">Mobile News</string>
    <string name="mobile_news">Mobile News</string>
    <string name="sign_in_picture">Sign in Picture</string>
    <string name="you_have_no_internet_connection">You have no internet connection. Wait for recovery</string>
    <string name="you_have_error_with_server">Server error occurred. Try again later</string>
    <string name="your_waiting_time_is_up">Your waiting time is up. Try later</string>
    <string name="error_image_view">errorImageView</string>
    <string name="close">Close</string>
    <string name="_continue">Continue</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="title_first">News according to your Preference and Interest.</string>
    <string name="title_second">Read anytime anywhere even without internet.</string>
    <string name="title_third">Share with your friends and community.</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="search">What are you looking for?</string>
    <string name="articles">Articles</string>
    <string name="back_button">back button</string>
    <string name="categories">Categories</string>
    <string name="newstr">News</string>
    <string name="let_s_get_you_started">Let’s get you started</string>
    <string name="select_your_interests_at_least_3">Select your Interests (at least 3)</string>
    <string name="continue_button">Continue</string>
    <string name="can_not_upload_data_to_firebase">Can not upload data to firebase</string>
    <string name="your_interests_have_been_saved">Your interests have been saved</string>
    <string name="sub_categories">Sub categories</string>
    <string name="congratulations">Congratulations!!</string>
    <string name="you_have_successfully_signed_in">You have successfully signed in.</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="username">UserName</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="saved_articles">Saved Articles</string>
    <string name="change_interests">Change Interests</string>
    <string name="log_out">Log Out</string>
    <string name="my_interests">My interests</string>
    <string name="save">Save</string>
    <string name="nothing_found">Nothing found</string>
    <string name="your_profile">Your profile</string>
</resources>