<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/congrats_dialog_horizontal_margin"
    android:layout_marginVertical="@dimen/congrats_dialog_vertical_margin"
    android:background="@drawable/bg_rounded_orange"
    android:paddingStart="@dimen/dp_30"
    android:paddingEnd="@dimen/dp_30"
    app:cardCornerRadius="@dimen/dp_20">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/successImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_30"
        android:src="@drawable/ic_success" />

    <TextView
        android:id="@+id/congratulationsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/successImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_16"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/congratulations"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/successfullySignedInTextView"
        style="@style/StyleRobotoWhite"
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        android:layout_below="@id/congratulationsTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/you_have_successfully_signed_in" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/letsGetStartedButton"
        android:layout_width="@dimen/dp_300"
        android:layout_height="wrap_content"
        android:layout_below="@id/successfullySignedInTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        android:background="@drawable/bg_rounded_button"
        android:fontFamily="@font/roboto"
        android:text="@string/let_s_get_started"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />

</RelativeLayout>
