<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/letsGetYouStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/let_s_get_you_started"
        android:textColor="@color/brown_dark"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_animation"
        android:layout_width="match_parent"
        app:lottie_colorFilter="@color/orange_dark"
        android:layout_height="wrap_content"
        app:lottie_rawRes="@raw/welcome"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintTop_toTopOf="@id/letsGetYouStarted"
        app:layout_constraintBottom_toBottomOf="@+id/selectYourInterests" />

    <TextView
        android:id="@+id/selectYourInterests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/select_your_interests_at_least_3"
        android:textColor="@color/brown_dark"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lottie_animation" />

    <ScrollView
        android:id="@+id/horizontalScroll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginHorizontal="@dimen/dp_6"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        app:layout_constraintBottom_toTopOf="@id/continueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectYourInterests">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_48"
            android:layout_marginVertical="@dimen/dp_3"
            android:padding="@dimen/dp_1"
            app:chipSpacing="@dimen/dp_3"
            app:selectionRequired="false"
            app:singleSelection="false" />

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueButton"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_50"
        android:background="@drawable/bg_rounded_orange_fill_button"
        android:enabled="false"
        android:text="@string/continue_button"
        android:textSize="@dimen/sp_16"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>